[package]
name = "JamDoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colog = "1.4.0"
figment = { version = "0.10.19", features = ["env", "json", "yaml"] }
id3 = { version = "1.16.4", features = ["tokio"] }
log = "0.4.29"
tokio = {version="1.49.0", features = ["full"]}
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
metaflac = "0.2.8"
